# searxng-scrambler

./: .gitignore  README.md  instances.example.txt  preferences.example.json  pyproject.toml
src/scrambler/: autostart.py  booster.py  circuits.py  cli.py  config.py  direct_engines.py  discover.py  fetcher.py  launcher.py  merger.py  parser.py  ranker.py  reader.py  selector.py  server.py  updater.py
src/scrambler/static/: map-sw.js
src/scrambler/templates/: _result_card.html  base.html  history.html  index.html  reader.html  results.html  saved.html  settings.html
